# research-health-bio

./: .gitignore  METHODS.md  README.md  datasets.yaml  methodology_preamble.py  occa_pillar_smoke.py  pyproject.toml
docs/: PREREG.md  PROGRESS.md  asymptotic_telemetry.csv  betti2_telemetry.csv  betti3_telemetry.csv  everyday_telemetry.csv  research_asymptotic_collapse.md  research_betti2_trans_existential.md  research_betti3_cosmological.md  research_everyday_environment.md  research_everyday_information.md  research_everyday_intake.md  research_everyday_output.md  research_everyday_relationships.md  research_everyday_sleep.md  research_everyday_spending.md  research_everyday_spirituality.md  research_everyday_work.md  research_everyday_workout.md
notebooks/: CHARTER_EMOTION_STREAM_SMOKE.ipynb  CHARTER_EXTENDED_LIGHT.ipynb  CHARTER_LAYER_A_MULTIDRAW_SMOKE.ipynb  CHARTER_OCCA_EXHAUST_SMOKE.ipynb  CHARTER_SHELL.ipynb  FUTURE_CHARTER_SLOT.ipynb  SMOKE_BOOTSTRAP.ipynb  SMOKE_IMPORTS.ipynb  SMOKE_LAYER_A.ipynb  clinical-grade-sexual-maintenance-and-recreation.ipynb  clinical-grade-sports-and-neurotropic-maintenance.ipynb  dog-health-optimization.ipynb  h5n1-influenza-recover-opt.ipynb  health-and-wellness-optimization.ipynb  health-optimization.ipynb  natal-health.ipynb  viral-and-infection-opti-solutions.ipynb
runs/: README.md  ci_notebooks.yaml  promotion_audit.example.yaml  smoke.yaml
scripts/: ci_execute_smoke_nb.py
tests/: test_bootstrap_mean_smoke.py  test_ci_executor_load_jobs.py  test_health_domain_stream_smoke.py  test_layer_a_permutation_smoke.py  (+5 more)
(+2 files in other folders)
