[project]
name = "research_health_bio"
version = "0.1.0"
description = "Research pillar notebooks"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.24",
  "pyyaml>=6",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.4",
  "nbformat>=5.10",
  "nbclient>=0.9",
  "ipykernel>=6.29",
  "datasets>=2.16",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
# Notebooks/runs live at repo root; only ship the preamble module via setuptools.
packages = []
py-modules = ["methodology_preamble"]

[tool.pytest.ini_options]
testpaths = ["tests"]
